--- a/index.html
+++ b/index.html
@@ -6,3 +6,6 @@
 
 <h1>Hello There!! </h1>
 <h3>I am Giovanny Andrade</h3>
+<p>
+Currently a student at long beach city college, I am a first year computer science student where so far I have taken some classes as an introduction to computer science and data structures and algorithms, I know I have a lot to learn but little by little I will keep learning. To say a little about myself is that I really like soccer and food, especially tacos and lasagna, in my free time I like to read and make small programs trying to improve my syntax in c++; My goal is to can transfer and get my bachelor's degree.
+</p>
