--- a/index.html
+++ b/index.html
@@ -1,10 +1,87 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta>
+        <title>Portfolio</title>
+    </head>
+    <body>
+        <h1 style = "color:red; ">Hello There!!</h1>
+        <p id = "index" style = "color: rgb(228, 228, 30);>Index:</p>
+        <ul>
+        <li><a href="#aboutme">About Me</a></li>
+        <li><a href="#aboutme">About Me</a></li>
+        <li><a href="#schoolprojects">School Projects</a></li>
+        <li><a href="#links">My links</a></li>
+        </ul>
+        <h3 id="aboutme">I am Giovanny Andrade</h3>
+        <p>Currently a student at Long Beach City College, I am a first year computer science student where so far I have taken classes as Introduction to computer science and Data Structures and Algorithms, I know I have a lot to learn but little by little I will get where I want.Some things about myself is that I really like soccer and food, especially tacos and lasagna haha:), in my free time I like to read and make small programs trying to improve my syntax in  C++; My goal is to keep improving in my coding skills and transfer to get my bachelor's degree.</p>
+        <p>&nbsp&nbsp&nbsp&nbspMe at Metropolitan Park of Leon, Guanajuato, Mexico:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspThis is My favorite Place in Guadalajara:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspMe and friends at the Chivas Stadium:</p>
+        <p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp"Presas El Toro"</p>
+        <a><img class="border" src="Images/me.png" width="400"></a>
+        <a><img class="border2"src="Images/place.png" width="400"></a>
+        <a><img class="border" src="Images/stadium.jpeg" width="490"></a>
+        <h3 id = "schoolprojects">School Projects</h3>
+        <h4>I've done small projects in my CS intro and data structure and algorithm classes, all of them very shorts.</h4>
+        <p>In my first project I had to do a program where "a bank" wanted a program that is able to read data from files and the calculate and display the final balance of money invested in a savings account. </p>
+        <link><a href = "https://drive.google.com/file/d/1XK82NcYZhO7Kv5JW1nVPUnNtEAeJ3_0l/view?usp=sharing">First Project</a></link>
+        <p>My Second project involved the use of 2D arrays to display data about the production of apples and oranges in certain countries around the world.</p>
+        <link><a href = "https://drive.google.com/drive/folders/1sv5CSGL6avPHFMx_7wmHdyrWSklp6CN-?usp=sharing">Second Project</a></link>
+        <p>My Third and most recent project was to read and  sort data by population in a "Census File" where originally the file was sorted alphabetically by state.</p>
+        <link><a href = "https://drive.google.com/drive/folders/1QMjbdd4moew3wRKcDPrBKZI9FshiJ7vk?usp=sharing">Third Project</a></link>
+        <p><li><a href="#index">Back to Index</a></li></p>
+        <h3 id = "links">Personal Links</h3>
+        <a href = "https://www.linkedin.com/in/giovanny-andrade-bbb34a20a/"><button>LinkedIn</button></a>
+        <p><a href = "mailto:giovannyandrade14@gmail.com"><button>EMAIL ME</button></a></p>
+        <p><li><a href="#index">Back to Index</a></li></p>
+        <h3>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp“Persistence can change failure into extraordinary achievement.” - Matt Biondi.</h3>
 
 
+    </body>
+</html>
 
+<style>
+    body{
+        background-color: rgb(61, 180, 141);
+      }
+      .border{
+          border-radius: 3cm;
+          border-color: chocolate;
+          border-style: dotted;
+      }
+      .border2{
+        border-radius: 3cm;
+          border-color: rgb(33, 187, 19);
+          border-style:solid;
+      }
+      
+  #ball {
+    width: 100px;
+    height: 100px;
+    margin: 50px auto;
+    position: relative;
+    border-radius: 50%;
+    background: linear-gradient(
+      35deg,
+      #ccffff,
+      #ffcccc
+    );
+    animation-name: bounce;
+    animation-duration: 1s;
+    animation-iteration-count: 3;
+  }
 
-
-
-<h1>Hello There!! </h1>
-<h3>I am Giovanny Andrade</h3>
-<p>
-</p>
+  @keyframes bounce{
+    30% {
+      top: 30px;
+    }
+    50% {
+      top: 100px;
+      width: 130px;
+      height: 70px;
+    }
+    100% {
+      top: 10px;
+    }
+  }
+    </style>
+    <div id="ball"></div>
