--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <link><a href = "https://drive.google.com/file/d/1XK82NcYZhO7Kv5JW1nVPUnNtEAeJ3_0l/view?usp=sharing">First Project</a></link>
         <p>My Second project involved the use of 2D arrays to display data about the production of apples and oranges in certain countries around the world.</p>
         <link><a href = "https://drive.google.com/drive/folders/1sv5CSGL6avPHFMx_7wmHdyrWSklp6CN-?usp=sharing">Second Project</a></link>
-        <p>My Third and most recent project was to read and  sort data by population in a "Census File" where originally the file was sorted alphabetically by state.</p>
+        <p>My Third and most recent project was to read and  sort data using Bubble and Selection Sort by population in a "Census File" where originally the file was sorted alphabetically by state.</p>
         <link><a href = "https://drive.google.com/drive/folders/1QMjbdd4moew3wRKcDPrBKZI9FshiJ7vk?usp=sharing">Third Project</a></link>
         <p><li><a href="#index">Back to Index</a></li></p>
         <h3 id = "links">Personal Links</h3>
